# Pick_and_place

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/baxter_mtc/lib/baxter_mtc/: baxter_mtc_node
install/baxter_mtc/share/baxter_mtc/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/baxter_mtc/share/baxter_mtc/cmake/: baxter_mtcConfig-version.cmake  baxter_mtcConfig.cmake
install/baxter_mtc/share/baxter_mtc/environment/: ament_prefix_path.dsv  path.dsv
install/baxter_mtc/share/baxter_mtc/launch/: baxter_launch.py
install/hello_moveit/lib/hello_moveit/: hello_moveit
install/hello_moveit/share/hello_moveit/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/hello_moveit/share/hello_moveit/cmake/: hello_moveitConfig-version.cmake  hello_moveitConfig.cmake
install/hello_moveit/share/hello_moveit/environment/: ament_prefix_path.dsv  path.dsv
install/mtc_tutorial/lib/mtc_tutorial/: mtc_node  novi_mtc_node
install/mtc_tutorial/share/mtc_tutorial/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/mtc_tutorial/share/mtc_tutorial/cmake/: mtc_tutorialConfig-version.cmake  mtc_tutorialConfig.cmake
install/mtc_tutorial/share/mtc_tutorial/environment/: ament_prefix_path.dsv  path.dsv
install/mtc_tutorial/share/mtc_tutorial/launch/: demo_pick.launch.py  environment_gazebo.launch.py  mtc_gazebo.launch.py  panda.launch.py  pick_and_place_baxter.launch.py  pick_place_demo.launch.py
install/rviz_gazebo_bridge/share/rviz_gazebo_bridge/: package.bash  package.zsh
log/: latest_build
src/baxter_mtc/: CMakeLists.txt
src/baxter_mtc/launch/: baxter_launch.py
src/baxter_mtc/src/: baxter_mtc_node.cpp
src/hello_moveit/: CMakeLists.txt
src/hello_moveit/src/: hello_moveit.cpp
src/mtc_tutorial/: CMakeLists.txt
src/mtc_tutorial/launch/: demo_pick.launch.py  environment_gazebo.launch.py  mtc_gazebo.launch.py  panda.launch.py  pick_place_demo.launch.py
src/mtc_tutorial/src/: mtc_baxter.cpp  mtc_node.cpp  novi_mtc_node.cpp
(+6 files in other folders)
